feat(rag): integrate pg_jieba for Chinese full-text search
- Add custom PostgreSQL Dockerfile with pg_jieba extension
- Update docker-compose.yml to use build instead of image
- Add V4 migration: enable pg_jieba + update trigger to jiebacfg
- Add ftsConfig property to RagRetrievalProperties (default: jiebacfg)
- HybridDocumentRetriever uses configurable ftsConfig instead of hardcoded 'simple'
- Fallback to simple via RAG_FTS_CONFIG env var